--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,7 @@
 html, body {
   background-color: var(--bg-color);
   color: var(--text-color);
+  overflow-x: hidden;
 }
 
 .scrollbar-hide::-webkit-scrollbar {
